--- a/index.html
+++ b/index.html
@@ -1,39 +1,12 @@
-<!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>page Title</title>
-    <script src="jquery-3.5.1.min.js"></script>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-    <input id="name"> name</input><br>
-    <input id="pwd"> password</input><br>
-    <button id="mark">按下按钮</button>
-    <button id="mark1">按下按钮</button>
-
+  <p><a href="test3.html">按钮操作</a></p><br>
+  <p><a href="test4.html">布局</a></p><br>
 </body>
-<script>
-    // document.getElementById("mark").addEventListener("click", function () {
-    //     window.alert("点击下面");
-        $("#mark1").click(function () {
-            // alert("点击下面");
-            let name = $("#name").val();
-            let password = $("#pwd").val();
-            if (name == "admin" && password == "admin") {
-                alert("success");
-            }
-            else {
-                alert("failed");
-
-            }
-
-        });
-
-
-</script>
-
 </html>
